added race related backend changes

--- a/Backend/.env
+++ b/Backend/.env
@@ -4,3 +4,4 @@ FLASK_SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:1234@localhost/horse
 FLASK_SQLALCHEMY_ECHO=True
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 FLASK_JWT=460ae8b1e15f07272652746a
+RACE_API_KEY=2f152f461dmsh65673f206e6a6dcp1397c1jsn2adf1f3698fd
