--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,6 @@
 FLASK_SECRET_KEY=adadsadkadsass
 FLASK_DEBUG=True
-FLASK_SQLALCHEMY_DATABASE_URI=mysql+pymysql://cxuw4f1ctxgkl9iv:r83jweadjn1ccahm@qbct6vwi8q648mrn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com/my8akg7w3jzx1pjk
+FLASK_SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:1234@localhost/horse
 FLASK_SQLALCHEMY_ECHO=True
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 FLASK_JWT=460ae8b1e15f07272652746a
