--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,8 +6,12 @@ name: Python application
 on:
   push:
     branches: [ "dev" ]
+    paths:
+      - 'backend/**'
   pull_request:
     branches: [ "dev" ]
+    paths:
+      - 'backend/**'
 
 permissions:
   contents: read
