--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,11 +7,11 @@ on:
   push:
     branches: [ "dev" ]
     paths:
-      - 'backend/**'
+      - 'Backend/**'
   pull_request:
     branches: [ "dev" ]
     paths:
-      - 'backend/**'
+      - 'Backend/**'
 
 permissions:
   contents: read
