--- a/Backend/local.env
+++ b/Backend/local.env
@@ -4,3 +4,4 @@ FLASK_SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:1234@localhost/horse
 FLASK_SQLALCHEMY_ECHO=True
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 FLASK_JWT=460ae8b1e15f07272652746a
+PORT=8080
