added new changes

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 VITE_REACT_API_URL=http://127.0.0.1:5000
-# prod url https://horse-race-prediction.onrender.com
+# VITE_REACT_API_URL=https://horse-race-prediction.onrender.com
