added test cases

--- a/Backend/.env
+++ b/Backend/.env
@@ -4,5 +4,5 @@ FLASK_SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:1234@localhost/horse
 FLASK_SQLALCHEMY_ECHO=True
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 FLASK_JWT=460ae8b1e15f07272652746a
-FLASK_RUN_PORT=8080
-FLASK_RUN_HOST=0.0.0.0
+PORT=8080
+#FLASK_RUN_HOST=0.0.0.0
