--- a/Backend/.prod.env
+++ b/Backend/.prod.env
@@ -4,4 +4,5 @@ FLASK_SQLALCHEMY_DATABASE_URI=mysql+pymysql://cxuw4f1ctxgkl9iv:r83jweadjn1ccahm@
 FLASK_SQLALCHEMY_ECHO=True
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 FLASK_JWT=460ae8b1e15f07272652746a
-PORT=8080
+FLASK_RUN_PORT=8080
+FLASK_RUN_HOST=0.0.0.0
