--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,6 +29,7 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
+        cd Backend
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip list
