--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,6 +33,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip list
+    - name: Install flake8
+      run: pip install flake8
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
